--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -1,23 +1,165 @@
 @import "bourbon/bourbon";
 @import "neat/neat";
 @import "bitters/bitters";
+@import url(http://fonts.googleapis.com/css?family=Roboto:100,300);
+
+$header-size: 50px;
+$max-width: em(960);
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  //background: url('/img/crossword.png');
+  //background: url('/img/green_dust_scratch.png');
+  //background: url('/img/text2.png')
+  //background: url('/img/grey_wash_wall.png')
+  background: url('/img/ste.png');
+}
+header {
+  height: $header-size;
+  background-color: #020202;
+  width: 100%;
+  box-shadow: 0 5px 4px -2px #999;
+}
+
+.title-text{
+  color: #dfdfdf;
+  font-size: 2.4em;
+  line-height: $header-size;
+}
+
+.title {
+  @include span-columns(6);
+  text-align: left;
+}
+
+.register {
+  @include span-columns(6);
+  text-align: right;
+}
+
+.register-text {
+  color: #020202;
+  letter-spacing: 1px;
+  font-size: 1.8em;
+  line-height: $header-size;
+  padding: 15px 10px;
+  background-color: #FFD98B;
+}
+
+.subtitle {
+  color: #ddd;
+  margin: 20px;
+  font-size: 2.4em;
+}
+
+.map-container {
+  position: relative;
+  width: 100%;
+}
+
+h1,h2,p {
+  display: block; 
+  text-align: center; 
+  font-weight: 100;
+}
+
+h2 {
+  font-size: 40px;
+  margin: 30px;
+}
+p {
+  font-size: 17px;
+  margin: 10px 10px;
+  line-height: 28px;
+}
 
 .hero {
+  box-shadow: 0 0 18px 4px #999;
   width: 100%;
-  height: 600px;
-  background: url('/img/crossword.png');
-  background-repeat: repeat;
+  height: 200px;
+@include linear-gradient(rgba(255,255,255,1), rgba(247,247,247,1));
+}
+.subhero {
+  width: 100%;
+  height: 400px;
+  @include outer-container;
+  color: #ddd;
+  p {
+    font-size: 14px;
+  }
+
+  h2 {
+    font-size: 30px;
+    font-weight: 300;
+  }
+
+
+  .col1,
+  .col2,
+  .col3{
+    @include span-columns(4);
+  }
+  
 }
 
 .container {
-  text-align: center;
-  width: 960px;
+  width: 860px;
 }
 
 .angular-google-map-container { 
+  img {
+    max-width: none;
+  }
   height: 480px; 
   width: 100%;
-  margin: 15px auto;
--webkit-box-shadow: 0 0 0 6px #BFB99F;
-box-shadow: 0 0 0 6px #BFB99F;
+  margin: 0px auto;
+  position: relative;
 }
+
+.angular-google-map {
+  position: relative;
+}
+
+@include keyframes(fadeIn) {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1.0;
+  }
+}
+
+.api-list {
+  .col1,
+  .col2,
+  .col3,
+  .col4,
+  .col5,
+  .col6 {
+    @include span-columns(2);
+    text-align: center;
+    line-height: 200px;
+  }
+  .col6 {
+    @include omega();
+  }
+
+  .api:hover {
+    @include animation(fadeIn 0.2s ease-in-out 1 forwards);
+  }
+  img {
+
+    max-width: 100%;
+    min-width: 40%;
+    opacity: 0.4;
+  }
+}
+
+footer {
+  width: 100%;
+  height: 80px;
+  color: #888;
+  background: url('/img/office.png');
+}
+
