--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html
     block links
     script(src='/js/jquery.js')
     script(src='/js/angular.js')
+    script(src='/js/angularjs-geolocation.min.js')
     script(src='https://cdn.firebase.com/v0/firebase.js')
     script(src='https://cdn.firebase.com/libs/angularfire/0.6.0/angularfire.min.js')
     script(src='https://cdn.firebase.com/js/simple-login/1.2.3/firebase-simple-login.js')
