replaced opencv logo with mashery

--- a/views/index.jade
+++ b/views/index.jade
@@ -58,8 +58,8 @@ block content
       a(href="http://sendgrid.com/")
         img.api(src="/img/sendgrid_logo.png")
     div.col6
-      a(href="http://opencv.org/")
-        img.api(src="/img/opencv_logo.png")
+      a(href="http://www.mashery.com")
+        img.api(src="/img/mashery_logo.png")
   footer
     div.container
       p All Rights Reserved.
